test_suite5/ALAN/test_suite/alan-2022-examples/failing/008810_mutation.alan
source B function F(boolean x, boolean relax) begin relax end begin relax end
